--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Clone') {
             steps {
-                git 'https://github.com/devopsamar950/nodejs-app.git'
+                 git branch: 'main', url: 'https://github.com/devopsamar950/nodejs-app.git'
             }
         }
         stage('Install') {
